{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 53,
  "lineage": "a394d7f7-7446-8a36-34d3-9e0a581ec368",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:489994096722:loadbalancer/app/ammar2/d0a52fd5aa93c4a2",
            "arn_suffix": "app/ammar2/d0a52fd5aa93c4a2",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ammar2-1131694067.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:489994096722:loadbalancer/app/ammar2/d0a52fd5aa93c4a2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ammar2",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02f9b3093fdfa953e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02d4f2d4b6c9a19ad"
              },
              {
                "subnet_id": "subnet-08e92674f8701b962"
              },
              {
                "subnet_id": "subnet-0d0fea81afb0f0c22"
              }
            ],
            "subnets": [
              "subnet-02d4f2d4b6c9a19ad",
              "subnet-08e92674f8701b962",
              "subnet-0d0fea81afb0f0c22"
            ],
            "tags": {
              "Name": "ammar2"
            },
            "tags_all": {
              "Name": "ammar2"
            },
            "vpc_id": "vpc-03639736ba84c39e6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.my_vpc.aws_eip.my_eip",
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_nat_gateway.my_nat_gateway",
            "module.my_vpc.aws_route.private_route",
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_route_table.public_route_table",
            "module.my_vpc.aws_route_table_association.private_route_assoc",
            "module.my_vpc.aws_route_table_association.public_route_assoc",
            "module.my_vpc.aws_security_group.allow_all",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current",
            "module.rds.aws_db_instance.mydb",
            "module.rds.aws_db_subnet_group.mydb_subnet_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:489994096722:listener/app/ammar2/d0a52fd5aa93c4a2/db68d119200e0d48",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:489994096722:targetgroup/ammar2/f6910c8c3e739514",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:489994096722:listener/app/ammar2/d0a52fd5aa93c4a2/db68d119200e0d48",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:489994096722:loadbalancer/app/ammar2/d0a52fd5aa93c4a2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "ammar2"
            },
            "tags_all": {
              "Name": "ammar2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.my_alb",
            "module.ecs.aws_lb_target_group.my_target_group",
            "module.my_vpc.aws_eip.my_eip",
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_nat_gateway.my_nat_gateway",
            "module.my_vpc.aws_route.private_route",
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_route_table.public_route_table",
            "module.my_vpc.aws_route_table_association.private_route_assoc",
            "module.my_vpc.aws_route_table_association.public_route_assoc",
            "module.my_vpc.aws_security_group.allow_all",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current",
            "module.rds.aws_db_instance.mydb",
            "module.rds.aws_db_subnet_group.mydb_subnet_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:489994096722:targetgroup/ammar2/f6910c8c3e739514",
            "arn_suffix": "targetgroup/ammar2/f6910c8c3e739514",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:489994096722:targetgroup/ammar2/f6910c8c3e739514",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ammar2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ammar2"
            },
            "tags_all": {
              "Name": "ammar2"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03639736ba84c39e6"
          },
          "dependencies": [
            "module.my_vpc.aws_eip.my_eip",
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_nat_gateway.my_nat_gateway",
            "module.my_vpc.aws_route.private_route",
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_route_table.public_route_table",
            "module.my_vpc.aws_route_table_association.private_route_assoc",
            "module.my_vpc.aws_route_table_association.public_route_assoc",
            "module.my_vpc.aws_security_group.allow_all",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current",
            "module.rds.aws_db_instance.mydb",
            "module.rds.aws_db_subnet_group.mydb_subnet_group"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09103b9c145222f6a",
            "association_id": "eipassoc-00bc6a3282c320c59",
            "domain": "vpc",
            "id": "eipalloc-09103b9c145222f6a",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0eddec26132da3962",
            "private_dns": "ip-10-0-1-6.us-west-2.compute.internal",
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-54-244-19-77.us-west-2.compute.amazonaws.com",
            "public_ip": "54.244.19.77",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:internet-gateway/igw-0329acfefaaf41b85",
            "id": "igw-0329acfefaaf41b85",
            "owner_id": "489994096722",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-03639736ba84c39e6"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09103b9c145222f6a",
            "association_id": "eipassoc-00bc6a3282c320c59",
            "connectivity_type": "public",
            "id": "nat-0a54d9bba5967e0b6",
            "network_interface_id": "eni-0eddec26132da3962",
            "private_ip": "10.0.1.6",
            "public_ip": "54.244.19.77",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d0fea81afb0f0c22",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.my_vpc.aws_eip.my_eip",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-039388f8a7824531e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a54d9bba5967e0b6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039388f8a7824531e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_eip.my_eip",
            "module.my_vpc.aws_nat_gateway.my_nat_gateway",
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:route-table/rtb-039388f8a7824531e",
            "id": "rtb-039388f8a7824531e",
            "owner_id": "489994096722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a54d9bba5967e0b6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03639736ba84c39e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:route-table/rtb-017f329cdbc38c3ac",
            "id": "rtb-017f329cdbc38c3ac",
            "owner_id": "489994096722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0329acfefaaf41b85",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03639736ba84c39e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c05627c515d5713e",
            "route_table_id": "rtb-039388f8a7824531e",
            "subnet_id": "subnet-01a075a71eb91fbd8"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f55f8ddc82868b07",
            "route_table_id": "rtb-039388f8a7824531e",
            "subnet_id": "subnet-0e06ecbf64c4a0c33"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026d0ea954b245c9c",
            "route_table_id": "rtb-039388f8a7824531e",
            "subnet_id": "subnet-018749ae01911f616"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7248ae085c8a656",
            "route_table_id": "rtb-017f329cdbc38c3ac",
            "subnet_id": "subnet-0d0fea81afb0f0c22"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_route_table.public_route_table",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d17a5e39ccaacd8",
            "route_table_id": "rtb-017f329cdbc38c3ac",
            "subnet_id": "subnet-02d4f2d4b6c9a19ad"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_route_table.public_route_table",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a94004d847716fc",
            "route_table_id": "rtb-017f329cdbc38c3ac",
            "subnet_id": "subnet-08e92674f8701b962"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_route_table.public_route_table",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:security-group/sg-02f9b3093fdfa953e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f9b3093fdfa953e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240103234422790200000001",
            "name_prefix": "terraform-",
            "owner_id": "489994096722",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-selected-ports"
            },
            "tags_all": {
              "Name": "allow-selected-ports"
            },
            "timeouts": null,
            "vpc_id": "vpc-03639736ba84c39e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-01a075a71eb91fbd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a075a71eb91fbd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-03639736ba84c39e6"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-0e06ecbf64c4a0c33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e06ecbf64c4a0c33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-03639736ba84c39e6"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-018749ae01911f616",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018749ae01911f616",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-3"
            },
            "tags_all": {
              "Name": "private-subnet-3"
            },
            "vpc_id": "vpc-03639736ba84c39e6"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-0d0fea81afb0f0c22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0fea81afb0f0c22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-03639736ba84c39e6"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-02d4f2d4b6c9a19ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d4f2d4b6c9a19ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-03639736ba84c39e6"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-08e92674f8701b962",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e92674f8701b962",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-3"
            },
            "tags_all": {
              "Name": "public-subnet-3"
            },
            "vpc_id": "vpc-03639736ba84c39e6"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_1\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:vpc/vpc-03639736ba84c39e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09be93f3e229ea7e8",
            "default_route_table_id": "rtb-0d10ceeef88129386",
            "default_security_group_id": "sg-05a247bfd32e062b1",
            "dhcp_options_id": "dopt-cc0f22b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03639736ba84c39e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d10ceeef88129386",
            "owner_id": "489994096722",
            "tags": {
              "Name": "ammar2-vpc"
            },
            "tags_all": {
              "Name": "ammar2-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_2\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0860d8d5df6b8834e",
            "domain": "vpc",
            "id": "eipalloc-0860d8d5df6b8834e",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-50-112-34-153.us-west-2.compute.amazonaws.com",
            "public_ip": "50.112.34.153",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_2\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:internet-gateway/igw-04764dbdf72cc1f32",
            "id": "igw-04764dbdf72cc1f32",
            "owner_id": "489994096722",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-0d86eb2243b812701"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_2\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0860d8d5df6b8834e",
            "association_id": "eipassoc-09dbf4046a7c531ee",
            "connectivity_type": "public",
            "id": "nat-0d7d21194b8453efe",
            "network_interface_id": "eni-08bb1107f0798a114",
            "private_ip": "10.0.1.177",
            "public_ip": "50.112.34.153",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0994c37b552c7a551",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.my_vpc.aws_eip.my_eip",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_2\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-029c6f26a5af0b90c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d7d21194b8453efe",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-029c6f26a5af0b90c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_eip.my_eip",
            "module.my_vpc.aws_nat_gateway.my_nat_gateway",
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_2\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:route-table/rtb-029c6f26a5af0b90c",
            "id": "rtb-029c6f26a5af0b90c",
            "owner_id": "489994096722",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d86eb2243b812701"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_2\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:route-table/rtb-0b123f6c98a807aee",
            "id": "rtb-0b123f6c98a807aee",
            "owner_id": "489994096722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04764dbdf72cc1f32",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d86eb2243b812701"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_2\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0badd6b4d08e3f4cb",
            "route_table_id": "rtb-029c6f26a5af0b90c",
            "subnet_id": "subnet-0825a51156a9c37e0"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d62ef81f416287c",
            "route_table_id": "rtb-029c6f26a5af0b90c",
            "subnet_id": "subnet-0d573b75923c7cbe6"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09056bbcff0c0e40f",
            "route_table_id": "rtb-029c6f26a5af0b90c",
            "subnet_id": "subnet-01c7db8be8905a2ce"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_2\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd8129f6c4250da1",
            "route_table_id": "rtb-0b123f6c98a807aee",
            "subnet_id": "subnet-0994c37b552c7a551"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_route_table.public_route_table",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bea06419f065a3f4",
            "route_table_id": "rtb-0b123f6c98a807aee",
            "subnet_id": "subnet-04fa39100b112b13c"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_route_table.public_route_table",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053147c4efd12259a",
            "route_table_id": "rtb-0b123f6c98a807aee",
            "subnet_id": "subnet-003aa36515d361bdc"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_route_table.public_route_table",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_2\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:security-group/sg-08ee42b6b35a8ce65",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ee42b6b35a8ce65",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240104002330341400000001",
            "name_prefix": "terraform-",
            "owner_id": "489994096722",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-selected-ports"
            },
            "tags_all": {
              "Name": "allow-selected-ports"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d86eb2243b812701"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-0825a51156a9c37e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0825a51156a9c37e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0d86eb2243b812701"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-0d573b75923c7cbe6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d573b75923c7cbe6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0d86eb2243b812701"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-01c7db8be8905a2ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c7db8be8905a2ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-3"
            },
            "tags_all": {
              "Name": "private-subnet-3"
            },
            "vpc_id": "vpc-0d86eb2243b812701"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-0994c37b552c7a551",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0994c37b552c7a551",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0d86eb2243b812701"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-04fa39100b112b13c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fa39100b112b13c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0d86eb2243b812701"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:subnet/subnet-003aa36515d361bdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003aa36515d361bdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489994096722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-3"
            },
            "tags_all": {
              "Name": "public-subnet-3"
            },
            "vpc_id": "vpc-0d86eb2243b812701"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.my_vpc.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc[\"vpc_2\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:489994096722:vpc/vpc-0d86eb2243b812701",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07a9a3ecabfa18b93",
            "default_route_table_id": "rtb-00a3b641fafe179b0",
            "default_security_group_id": "sg-0a5a5311008c6b3d8",
            "dhcp_options_id": "dopt-cc0f22b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d86eb2243b812701",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00a3b641fafe179b0",
            "owner_id": "489994096722",
            "tags": {
              "Name": "ammar2-vpc"
            },
            "tags_all": {
              "Name": "ammar2-vpc"
            }
          }
        }
      ]
    }
  ]
}